# wosstarter_python_client

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
clarivate/wos_starter/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
docs/: AuthorName.md  Document.md  DocumentCitationsInner.md  DocumentIdentifiers.md  DocumentKeywords.md  DocumentLinks.md  DocumentNames.md  DocumentSource.md  DocumentSourcePages.md  DocumentsApi.md  DocumentsList.md  Journal.md  JournalLinksInner.md  JournalsApi.md  JournalsList.md  Metadata.md  OtherName.md
docs/apis/tags/: DocumentsApi.md  JournalsApi.md
docs/models/: AuthorName.md  Document.md  DocumentsList.md  Journal.md  JournalsList.md  Metadata.md  OtherName.md
test/: test_author_name.py  test_document.py  test_document_citations_inner.py  test_document_identifiers.py  test_document_keywords.py  test_document_links.py  test_document_names.py  test_document_source.py  test_document_source_pages.py  test_documents_api.py  test_documents_list.py  test_journal.py  test_journal_links_inner.py  test_journals_api.py  test_journals_list.py  test_metadata.py  test_other_name.py
test/test_models/: test_author_name.py  test_document.py  test_documents_list.py  test_journal.py  test_journals_list.py  test_metadata.py  test_other_name.py
test/test_paths/test_documents/: test_get.py
test/test_paths/test_documents_uid/: test_get.py
test/test_paths/test_journals/: test_get.py
test/test_paths/test_journals_id/: test_get.py
(+50 files in other folders)
